fixed spacing
fixed spacing on media 800

--- a/css/index.css
+++ b/css/index.css
@@ -227,7 +227,7 @@ footer a {
   } */
 
 header {
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 
  header nav {
@@ -254,8 +254,10 @@ header {
     display: none;
     }
     
- .half {
+ .half div.description {
     margin: 40px auto;
+    flex-wrap: wrap;
+    width: 350px;
 }
 
 .half div.title  {
@@ -266,10 +268,13 @@ header {
     margin-top: 150px;
     margin-left: -10px;
 }
+
 .hero {
 }
+
 main {
-    margin: 0 20px;
+    margin: 0 40px;
+    width: 700px;
 }
 
 main p {
@@ -278,13 +283,14 @@ main p {
 
 .thirds div.description {
     width: 200px;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 
 main .middle-img {
-    width: 760px;
-    margin-top: -40px;
+    width: 700px;
+    margin-top: -60px;
 }
+
 footer {
     padding: 0 40px 40px;
 }
